--- a/debian/rules
+++ b/debian/rules
@@ -10,6 +10,8 @@ override_dh_auto_install:
 	dh_auto_install
 	# Install systemd user service
 	install -D -m 644 prosody.service debian/prosody-stt/usr/lib/systemd/user/prosody.service
+	# Also install service file where postinst can find it
+	install -D -m 644 prosody.service debian/prosody-stt/usr/share/prosody-stt/prosody.service
 	# Create wrapper script that ensures dependencies
 	install -D -m 755 debian/prosody-wrapper debian/prosody-stt/usr/bin/prosody
 
