--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y portaudio19-dev python3-tk
+        sudo apt-get install -y portaudio19-dev python3-tk xvfb
         
     - name: Install dependencies
       run: |
@@ -34,4 +34,4 @@ jobs:
         
     - name: Run tests
       run: |
-        pytest
+        xvfb-run -a pytest
