--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper-compat (= 13),
                python3-all,
                python3-setuptools
 Standards-Version: 4.6.0
-Homepage: https://github.com/yourusername/prosody
+Homepage: https://github.com/loganthorneloe/prosody
 Rules-Requires-Root: no
 
 Package: prosody-stt
@@ -16,16 +16,8 @@ Depends: ${python3:Depends},
          ${misc:Depends},
          python3 (>= 3.8),
          python3-pip,
-         python3-numpy,
-         python3-pynput,
-         python3-sounddevice,
-         python3-pil,
-         python3-tk,
-         portaudio19-dev,
-         libportaudio2,
-         ffmpeg
-Recommends: python3-torch,
-            python3-torchaudio
+         python3-dev,
+         portaudio19-dev
 Description: Minimalist speech-to-text for Linux
  Prosody is a lightweight speech-to-text application that runs in the
  background on Linux systems. It uses OpenAI's Whisper model for accurate
