Force Debian package to not auto-detect Python dependencies
Add overrides to prevent dh_python3 from auto-generating dependencies
that don't exist as Debian packages. All Python deps are handled by
the wrapper script installing them in a virtualenv.

--- a/debian/rules
+++ b/debian/rules
@@ -20,10 +20,15 @@ override_dh_auto_install:
 	install -D -m 755 debian/prosody-wrapper debian/prosody-stt/usr/bin/prosody
 
 override_dh_python3:
-	dh_python3 --no-ext-rename
+	# Don't auto-generate Python dependencies since we handle them in wrapper
+	dh_python3 --no-ext-rename --no-guessing-deps
 
 override_dh_installchangelogs:
 	dh_installchangelogs
 
 override_dh_installdocs:
 	dh_installdocs README.md
+
+override_dh_shlibdeps:
+	# Skip automatic dependency generation
+	dh_shlibdeps --dpkg-shlibdeps-params=--ignore-missing-info
