--- a/prosody.service
+++ b/prosody.service
@@ -4,7 +4,7 @@ After=graphical-session.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python3 -m prosody
+ExecStart=/usr/bin/prosody
 Restart=on-failure
 RestartSec=5
 Environment="DISPLAY=:0"
