Fix desktop launcher not working
- Create prosody-gui script for GUI launches (no terminal output)
- Shows notifications for first-run setup progress
- Logs output to ~/.config/prosody/prosody.log
- Desktop launcher now uses prosody-gui instead of prosody
- Updates README to note first launch installs dependencies

--- a/debian/rules
+++ b/debian/rules
@@ -16,8 +16,9 @@ override_dh_auto_install:
 	install -D -m 644 prosody.service debian/prosody-stt/usr/lib/systemd/user/prosody.service
 	# Also install service file where postinst can find it
 	install -D -m 644 prosody.service debian/prosody-stt/usr/share/prosody-stt/prosody.service
-	# Create wrapper script that ensures dependencies
+	# Create wrapper scripts
 	install -D -m 755 debian/prosody-wrapper debian/prosody-stt/usr/bin/prosody
+	install -D -m 755 prosody-gui debian/prosody-stt/usr/bin/prosody-gui
 
 override_dh_python3:
 	# Don't auto-generate Python dependencies since we handle them in wrapper
