--- a/prosody.desktop
+++ b/prosody.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Prosody Speech-to-Text
 Comment=Voice typing for any application
 Icon=audio-input-microphone
-Exec=/usr/bin/prosody
+Exec=/usr/bin/prosody-gui
 Terminal=false
 Categories=Utility;Accessibility;
 Keywords=speech;voice;dictation;transcription;whisper;
