Rename prosody-gui to prosody-launcher for clarity
- Better name to indicate it's just a launcher, not a GUI app
- Update README to emphasize silent background operation
- Prosody runs completely invisibly - no windows or UI
- Only shows brief notifications and recording waveform

--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,7 @@ override_dh_auto_install:
 	install -D -m 644 prosody.service debian/prosody-stt/usr/share/prosody-stt/prosody.service
 	# Create wrapper scripts
 	install -D -m 755 debian/prosody-wrapper debian/prosody-stt/usr/bin/prosody
-	install -D -m 755 prosody-gui debian/prosody-stt/usr/bin/prosody-gui
+	install -D -m 755 prosody-launcher debian/prosody-stt/usr/bin/prosody-launcher
 
 override_dh_python3:
 	# Don't auto-generate Python dependencies since we handle them in wrapper
