Bundle all dependencies in .deb package - proper self-contained app
MAJOR CHANGE: Package is now completely self-contained
- All Python dependencies bundled in /opt/prosody/venv
- No more installing packages in user's Python environment
- Package size ~2GB but zero runtime downloads
- Professional approach - no system pollution
- Instant startup - everything pre-installed

--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,10 @@ override_dh_auto_test:
 
 override_dh_auto_install:
 	dh_auto_install
+	# Build the self-contained bundle
+	./build-bundle.sh
+	# Copy the entire bundle
+	cp -r debian/prosody-bundle/opt debian/prosody-stt/
 	# Install systemd user service
 	install -D -m 644 prosody.service debian/prosody-stt/usr/lib/systemd/user/prosody.service
 	# Also install service file where postinst can find it
