--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Install build dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential debhelper dh-python python3-all python3-setuptools
+        sudo apt-get install -y build-essential debhelper dh-python python3-all python3-setuptools python3-pip python3-venv
         
     - name: Determine version
       id: version
