--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,9 @@ torchaudio>=0.10.0
 numba>=0.56.4
 more-itertools>=8.12.0
 tiktoken>=0.3.1
+
+# Test dependencies (optional, for development)
+pytest>=7.0.0
+pytest-cov>=3.0.0
+pytest-mock>=3.6.0
+pytest-timeout>=2.1.0
