--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ numba>=0.56.4
 more-itertools>=8.12.0
 tiktoken>=0.3.1
 
-# Test dependencies (optional, for development)
+# Test dependencies
 pytest>=7.0.0
 pytest-cov>=3.0.0
 pytest-mock>=3.6.0
